<resources>
    <string name="app_name">EndeavorApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fullname">FullName</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="pwd">PASSWORD</string>
    <string name="next">NEXT</string>
    <string name="forget">FORGET PASSWORD ?</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="inscrit">INSCRIT</string>
    <string name="log">LOGIN</string>
    <string name="change">CHANGE PASSWORD</string>
    <string name="newUser">I DONT HAVE ACCOUNT</string>
    <string name="logoutTitle">Logout</string>
    <string name="logoutMessage">Are you sure you want to logout ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_level1">Level1Activity</string>
</resources>