<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant_splash2"
    tools:context=".ui.InscritActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profilePicAdd"
            android:layout_width="392dp"
            android:layout_height="259dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/top_background" />
        <ImageView
            android:id="@+id/imageProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayoutFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePicAdd"
            app:startIconDrawable="@drawable/ic_account_circle"
            app:startIconTint="#058C7F">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtFullNameAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/fullname"
                android:background="@drawable/background_border2"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/email"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLayoutFullName"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="#058C7F">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmailAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_border2"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayoutPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLayoutEmail"
            app:startIconDrawable="@drawable/ic_key"
            app:startIconTint="#058C7F">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPwdAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_border2"
                android:hint="@string/pwd"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayoutAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/age"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLayoutPwd"
            app:startIconDrawable="@drawable/ic_calendar"
            app:startIconTint="#058C7F">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAgeAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_border2"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnInscit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="INSCRIT"
            android:textSize="18sp"
            app:backgroundTint="#058C7F"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLayoutAge" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>